Release 3.11.0 (?? ????????? 201?)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Release 3.11.0 is under development, not yet released.

* ================== PLATFORM CHANGES =================

* ==================== TOOL CHANGES ====================

* Memcheck:

* Helgrind:

* Callgrind:

* ==================== OTHER CHANGES ====================

* ==================== FIXED BUGS ====================

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in
bugzilla (https://bugs.kde.org/enter_bug.cgi?product=valgrind) rather
than mailing the developers (or mailing lists) directly -- bugs that
are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

333051  mmap of huge pages fails due to incorrect alignment
335440  arm64: ld1 (single structure) is not implemented
335713  arm64: unhanded instruction: prfm (immediate)
338731  ppc: Fix testuite build for toolchains not supporting -maltivec
338995  shmat with hugepages (SHM_HUGETLB) fails with EINVAL
339020  ppc64: memcheck/tests/ppc64/power_ISA2_05 failing in nightly build
339156  gdbsrv not called for fatal signal
339442  Fix testsuite build failure on OS X 10.9
339645  Use correct tag names in sys_getdents/64 wrappers
339182  ppc64: AvSplat ought to load destination vector register with 16/16
        bytes stored prior
339433  ppc64 lxvw4x instruction uses four 32-byte loads
339442  OS X 10.9 testsuite build failure: threadname.c:6:10:
        fatal error: 'sys/prctl.h' file not found
339542  Support compilation with Intel's ICC compiler
339688  Mac-specific ASM does not support .version directive (cpuid,
        tronical and pushfpopf tests)
339706  Fix false positive for ioctl(TIOCSIG) on linux