@@ -1,12 +1,16 @@
+[[[
 Invalid write of size 1
    at 0x........: main (badaddrvalue.c:8)
  Address 0x........ is 1 bytes before a block of size 8 alloc'd
    at 0x........: malloc (vg_replace_malloc.c:...)
    by 0x........: main (badaddrvalue.c:7)
 
+]]]
+[[[
 Invalid read of size 1
    at 0x........: main (badaddrvalue.c:9)
  Address 0x........ is 1 bytes before a block of size 8 alloc'd
    at 0x........: malloc (vg_replace_malloc.c:...)
    by 0x........: main (badaddrvalue.c:7)
 
+]]]
